// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArtObjects Component > display 20 items on initial render and load more button 1`] = `
<DocumentFragment>
  <section
    class="ArtObjects"
  >
    <h1
      class="ArtObjects__title"
    >
      35 works in Paris
    </h1>
    <ul
      class="ArtObjects__list"
    >
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-0 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-0"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-0 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-1 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-1"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-2 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-2"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-2 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-3 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-3"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-4 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-4"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-4 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-5 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-5"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-5 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-6 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-6"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-6 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-7 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-7"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-7 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-8 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-8"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-8 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-9 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-9"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-9 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-10 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-10"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-10 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-11 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-11"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-11 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-12 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-12"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-12 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-13 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-13"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-13 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-14 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-14"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-14 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-15 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-15"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-15 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-16 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-16"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-16 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-17 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-17"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-17 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-18 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-18"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-18 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-19 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-19"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-19 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
    </ul>
    <button
      class="ArtObjects__load-more"
      type="button"
    >
      Load more
    </button>
  </section>
</DocumentFragment>
`;

exports[`ArtObjects Component > hide load more button when there is no more data to fetch 1`] = `
<DocumentFragment>
  <section
    class="ArtObjects"
  >
    <h1
      class="ArtObjects__title"
    >
      35 works in Paris
    </h1>
    <ul
      class="ArtObjects__list"
    >
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-0 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-0"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-0 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-1 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-1"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-2 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-2"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-2 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-3 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-3"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-3 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-4 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-4"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-4 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-5 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-5"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-5 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-6 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-6"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-6 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-7 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-7"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-7 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-8 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-8"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-8 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-9 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-9"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-9 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-10 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-10"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-10 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-11 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-11"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-11 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-12 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-12"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-12 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-13 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-13"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-13 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-14 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-14"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-14 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-15 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-15"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-15 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-16 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-16"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-16 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-17 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-17"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-17 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-18 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-18"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-18 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-19 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-19"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-19 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-20 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-20"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-20 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-21 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-21"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-21 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-22 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-22"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-22 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-23 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-23"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-23 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-24 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-24"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-24 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-25 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-25"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-25 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-26 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-26"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-26 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-27 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-27"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-27 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-28 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-28"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-28 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-29 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-29"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-29 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-30 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-30"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-30 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-31 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-31"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-31 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-32 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-32"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-32 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-33 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-33"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-33 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
      <li
        class="Card"
        tabindex="0"
      >
        <figure>
          <img
            alt="title-34 Lorem ipsum dolor sit amet."
            class="Card__image"
            loading="lazy"
            src="image-34"
          />
          <figcaption
            class="Card__title"
          >
            <span>
              longTitle-34 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
            </span>
          </figcaption>
        </figure>
      </li>
    </ul>
  </section>
</DocumentFragment>
`;
